--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "prerender": "5.4.4"
+    "prerender": "5.4.4",
+    "prerender-memory-cache": "^1.0.2"
   }
 }
